...
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
    </fragment>

    <fragment
        android:id="@+id/locationHistory"
        android:name="es.uniovi.eii.contacttracker.fragments.history.LocationHistoryFragment"
        android:label="Histórico"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/showLocationsInMap"
            app:destination="@id/historyMapsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
...
