<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
    <string name="hour">Hora</string>
...
    <string name="shared_prefs_new_install">NewInstall</string>

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>


...
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="labelStartStop">Iniciar o Detener el rastreador de ubicación</string>
    <string name="labelStartedService">Servicio de localización iniciado.</string>
    <string name="labelStoppedService">Servicio de localización detenido.</string>
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>

    <!-- Títulos de las Tabs de la opción de menú de rastreo -->
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="tabMap">Mapa</string>

    <!-- Fragment de Información del rastreo de ubicación -->
    <string name="labelNoLocations">No hay localizaciones que mostrar.</string>


    <!-- Fragment: Histórico de localizaciones -->
...
    <string name="fabMapTypeDescription">FAB para desplegar tipos de mapa</string>
    <string name="fabMapNormalDescription">FAB para seleccionar tipo normal de mapa</string>
    <string name="fabMapSatelliteDescription">FAB para seleccionar tipo satélite de mapa</string>
    <string name="showInMapContentDescription">Visualizar en el mapa</string>
    <string name="hide_markers">Ocultar marcadores</string>
    <string name="show_markers">Mostrar marcadores</string>
    <string name="markers">Marcadores</string>


    <!-- Política de Privacidad -->
    <string name="personalDataConsent">Consentimiento de Protección de Datos</string>
    <string name="personalDataRationale">Esta aplicación utiliza tus datos personales asociados a las localizaciones registradas
        para facilitar y mejorar las tareas de rastreo por parte de las autoridades sanitarias. Estos datos personales serán subidos a la nube una
...
