...
            android:id="@+id/trackLocationAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.ContactTracker.AppBarOverlay">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/trackLocationTabLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabInlineLabel="true"/>
        </com.google.android.material.appbar.AppBarLayout>
...
