<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="es.uniovi.eii.contacttracker.viewmodels.TrackerViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey1"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationTrackerTitle"
                android:textColor="@color/teal_700"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:drawableEndCompat="@drawable/ic_location_tracker_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_tracker_explanation"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTrackLocation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="@{viewModel.isLocationServiceActive}"
                android:text="@string/labelStartStopTracker"
                app:switchPadding="20dp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>