...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <include
                android:id="@+id/layoutCardLocationTracker"
                layout="@layout/card_location_tracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@+id/layoutCardLocationAlarm"
                app:layout_constraintEnd_toEndOf="parent"
...
