...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutStartAutoTracking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/init"
                        app:boxStrokeColor="@color/teal_200"
                        android:layout_marginEnd="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtStartAutoTracking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{du.formatDate(viewModel.starTime, "HH:mm")}'
                            android:editable="false"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
...
