...
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fabTypeSatellite"
        app:layout_constraintEnd_toEndOf="@+id/fabTypeSatellite" />

    <!-- Chip para ocultar/mostrar los marcadores -->
    <com.google.android.material.chip.Chip
        android:id="@+id/chipShowMarkers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/markers"
        android:checked="true"
        app:checkedIconEnabled="true"
...
